# invertible-cdf

./: CMakeLists.txt  LICENSE.md  README.md  build-debug.sh  build.sh  invertible-cdf.hpp  run-books-experiment.sh  setup.sh  test.sh
include/: builder.hpp  common.hpp  ts.hpp
include/cht/: builder.hpp  cht.hpp  common.hpp
include/rs/: builder.h  common.h  radix_spline.h
src/: CMakeLists.txt  books-experiment.cpp  tests.cpp
src/support/: datasets.hpp
